[package]
name = "aline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.17", default-features = false }
aline-macro = { version = "0.1.0", path = "../aline-macro" }

[dev-dependencies]
heapless = "0.8.0"
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = ["std"]
std = []
